Added CRUD for Portfolios and PortfolioAssets
