# API/app.js
@@ -12,6 +12,7 @@ const indexRouter = require('./routes/index');
 const usersRouter = require('./routes/users');
 const assetsRouter = require('./routes/assets');
 const portfoliosRouter = require('./routes/portfolios');
+const portfolioAssetsRouter = require('./routes/portfolioAssets');
 
 
 var app = express();
@@ -33,6 +34,7 @@ app.use('/', indexRouter);
 app.use('/users', usersRouter);
 app.use('/assets',assetsRouter);
 app.use('/portfolios',portfoliosRouter);
+app.use('/portfolio_assets',portfolioAssetsRouter);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 // catch 404 and forward to error handler
